syntax = "proto3";
package gateway.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway2/pkg/api/gateway.gloo.solo.io/v1alpha1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

import "google/protobuf/wrappers.proto";

message Autoscaling {
  HorizontalPodAutoscaler horizontal_pod_autoscaler = 1;
}

message HorizontalPodAutoscaler {
  google.protobuf.UInt32Value min_replicas = 1;
  google.protobuf.UInt32Value max_replicas = 2;
  google.protobuf.UInt32Value target_cpu_utilization_percentage = 3;
  google.protobuf.UInt32Value target_memory_utilization_percentage = 4;
}