syntax = "proto3";
package gateway.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway2/pkg/api/gateway.gloo.solo.io/v1alpha1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

import "github.com/solo-io/gloo/projects/gateway2/api/external/kubernetes/api/core/v1/generated.proto";

message Pod {
  map<string, string> annotations = 1;

  k8s.io.api.core.v1.PodSecurityContext security_context = 2;

  repeated k8s.io.api.core.v1.LocalObjectReference image_pull_secrets = 3;

  map<string, string> node_selector = 4;

  k8s.io.api.core.v1.Affinity affinity = 5;

  repeated k8s.io.api.core.v1.Toleration tolerations = 6;
}
