syntax = "proto3";
package gateway.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway2/pkg/api/gateway.gloo.solo.io/v1alpha1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

// Configuration for the Kubernetes Service that exposes the Envoy proxy over
// the network.
message Service {
  // The Kubernetes Service type.
  ServiceType type = 1;

  // The manually specified IP address of the service, if a randomly assigned
  // IP is not desired. See
  // https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
  // and
  // https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
  // on the implications of setting `clusterIP`. This field only applies when
  // the service is of type ClusterIP, NodePort, or LoadBalancer.
  string clusterIP = 2;

  // The DNS name to which the service will be mapped. Only applies to services
  // of type ExternalName.
  string external_name = 3;

  // Kubernetes Service type. If not specified, defaults to `ClusterIP`.
  // See
  // https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
  // for details on each service type.
  enum ServiceType {
    // Exposes the Service on a cluster-internal IP. This is the default.
    ClusterIP = 0;
    // Exposes the Service on each Node's IP at a static port.
    NodePort = 1;
    // Exposes the Service externally using an external load balancer.
    LoadBalancer = 2;
    // Maps the Service to the contents of the `externalName` field.
    ExternalName = 3;
  }
}
